--- a/sls/serverless.yml
+++ b/sls/serverless.yml
@@ -24,6 +24,7 @@ provider:
 # you can overwrite defaults here
   stage: dev
   region: ap-northeast-1
+  profile: my-sls
 
 # you can add statements to the Lambda function's IAM Role here
 #  iamRoleStatements:
