--- a/bot/package.json
+++ b/bot/package.json
@@ -5,6 +5,7 @@
   "author": "ohr486 <ohr486@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "express": "4.15.4",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
     "hubot-google-images": "^0.2.7",
