--- a/bot/package.json
+++ b/bot/package.json
@@ -5,6 +5,7 @@
   "author": "ohr486 <ohr486@gmail.com>",
   "description": "A simple helpful robot for your Company",
   "dependencies": {
+    "core-js": "^2.5.1",
     "express": "4.15.4",
     "hubot": "^2.19.0",
     "hubot-diagnostics": "0.0.2",
