--- a/bot/package.json
+++ b/bot/package.json
@@ -19,7 +19,8 @@
     "hubot-rules": "^0.1.2",
     "hubot-scripts": "^2.17.2",
     "hubot-shipit": "^0.2.1",
-    "hubot-slack": "^4.4.0"
+    "hubot-slack": "^4.4.0",
+    "object-assign": "^4.1.1"
   },
   "engines": {
     "node": "0.10.x"
